# HPO-VAE-EGObox

./: .gitignore  README.md  pyproject.toml
src/HPO_VAE_EGObox/: ProblemHPONrjMin.py
src/HPO_VAE_EGObox/Data/AshbyVAE/Data_material_ashby/: ashby_from_granta_selection3.xlsx
src/HPO_VAE_EGObox/Energy_measurement/: ScientificSimulation.py
src/HPO_VAE_EGObox/Energy_measurement/utils/: DataframeHandler.py
src/HPO_VAE_EGObox/Example/: launch_script.py
src/HPO_VAE_EGObox/VAE/: HPO_VAE.py  Variational_autoencoder_material_selection.py  materialEncoder.py  networks.py
src/HPO_VAE_EGObox/VAE/utils/: utilFuncs.py
